MDEV-36435 Assertion failure in 	   Table_specification_st::finalize_locked_tables upon attempt 	   to create an already existing table under lock

If table is locked and IF NOT EXISTS applies to existing table
create_table_impl() returns -1. In that case finalize_locked_tables()
should be skipped as it handles only table_was_deleted and
table_was_renamed cases.

Another option is to add table_was_skipped flag and check it in
finalize_locked_tables() assertion. But this blows up
Table_specification_st which is not needed in this simple case.